# frogger

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  check_installation.py  entrypoint.sh  environment.yml  index.markdown  pyproject.toml  requirements.txt  setup.py  setup_mosek.sh  startup.sh
.github/workflows/: code_checks.yml
_layouts/: default.html
assets/css/: style.scss
core/: objects.py  paper_experiments.py  pickup.py  sampling.py
core/robots/: robot_core.py  robots.py
data/001_chips_can/: exp_001_chips_can_fr3_arm_algr_rh_1.pkl  exp_001_chips_can_fr3_arm_algr_rh_2.pkl  exp_001_chips_can_fr3_arm_algr_rh_fccorr16.pkl
data/002_master_chef_can/: exp_002_master_chef_can_fr3_arm_algr_rh_1.pkl  exp_002_master_chef_can_fr3_arm_algr_rh_2.pkl  exp_002_master_chef_can_fr3_arm_algr_rh_fccorr16.pkl
data/003_cracker_box/: exp_003_cracker_box_fr3_arm_algr_rh_1.pkl  exp_003_cracker_box_fr3_arm_algr_rh_2.pkl  exp_003_cracker_box_fr3_arm_algr_rh_fccorr16.pkl
data/004_sugar_box/: exp_004_sugar_box_fr3_arm_algr_rh_1.pkl  exp_004_sugar_box_fr3_arm_algr_rh_2.pkl  exp_004_sugar_box_fr3_arm_algr_rh_fccorr16.pkl
data/005_tomato_soup_can/: exp_005_tomato_soup_can_fr3_arm_algr_rh_1.pkl  exp_005_tomato_soup_can_fr3_arm_algr_rh_2.pkl  exp_005_tomato_soup_can_fr3_arm_algr_rh_fccorr16.pkl
data/006_mustard_bottle/: exp_006_mustard_bottle_fr3_arm_algr_rh_1.pkl  exp_006_mustard_bottle_fr3_arm_algr_rh_2.pkl  exp_006_mustard_bottle_fr3_arm_algr_rh_fccorr16.pkl
data/007_tuna_fish_can/: exp_007_tuna_fish_can_fr3_arm_algr_rh_1.pkl  exp_007_tuna_fish_can_fr3_arm_algr_rh_2.pkl
data/008_pudding_box/: exp_008_pudding_box_fr3_arm_algr_rh_1.pkl  exp_008_pudding_box_fr3_arm_algr_rh_2.pkl
data/009_gelatin_box/: exp_009_gelatin_box_fr3_arm_algr_rh_1.pkl  exp_009_gelatin_box_fr3_arm_algr_rh_2.pkl
data/010_potted_meat_can/: exp_010_potted_meat_can_fr3_arm_algr_rh_1.pkl  (+1 more)
docker/: testVHACD
examples/: algr.py  bh280.py  fr3algr.py
frogger/: __init__.py  baselines.py  grasping.py  metrics.py  objects.py  paper_experiments.py  pickup.py  sampling.py  sdfs.py  solvers.py  utils.py
scripts/: clean_ycb_meshes.py  sample_example.py  test_nerf_grasping_solver.py  timing.py
(+114 files in other folders)
